bug: Prevent horizontal scrolling on mobile devices

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+body,
+html {
+  overflow-x: hidden;
+  }
 .favicon {
     width: 50px;
 }
